--- a/src/templates/entity.html
+++ b/src/templates/entity.html
@@ -2,17 +2,17 @@
     <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs">
             <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" role="tab" id="title-tab-{{lid}}" href="#title-{{lid}}">{{title}}</a>
+                <a class="nav-link active" data-toggle="tab" role="tab" id="title-tab-{{lid}}" href="#title-{{lid}}">Summary</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#xml-{{lid}}" data-toggle="tab" role="tab" id="xml-tab-{{lid}}">XML</a>
+                <a class="nav-link" href="#xml-{{lid}}" data-toggle="tab" role="tab" id="xml-tab-{{lid}}">Metadata</a>
             </li>
         </ul>
     </div>
     <div class="tab-content" id="tab-content-{{lid}}">
         <div class="tab-pane fade show active" id="title-{{lid}}" role="tabpanel" aria-labelledby="title-tab-{{lid}}">
             <div class="row no-gutters h-100 pt-2 px-2">
-                <div class="col-md-4 text-center my-auto pb-10 h-100">
+                <div class="col-md-3 text-center my-auto pb-10 h-100">
                     <div class="icon-container my-2 px-2">
                     {{#entity_icon_url}}
                     <img src="{{entity_icon_url.url}}"
@@ -27,25 +27,21 @@
                     {{/entity_icon_url}}
                     </div>
                 </div>
-                <div class="col-md-8 info-container my-2 px-2">
+                <div class="col-md-9 info-container my-2 px-2">
                     <div class="card-body">
-                        <h5 class="card-title">{{tile}}</h5>
+                        <h5 class="card-title">{{title}}</h5>
                         {{#descr}}
-                        <p class="card-text">{{descr}}</p>
+                        <p class="card-text text-muted">{{descr}}</p>
                         {{/descr}}
                         <dl>
                             {{#privacy_statement_url}}
                             <dt>Privacy Statement</dt>
-                            <dd><a href="{{privacy_statement_url}}">{{privacy_statement_url}}</a></dd>
+                            <dd><a href="{{privacy_statement_url}}" class="d-block text-truncate">{{privacy_statement_url}}</a></dd>
                             {{/privacy_statement_url}}
                             {{#scope}}
                             <dt>Scope</dt>
                             <dd>{{scope}}</dd>
                             {{/scope}}
-                            {{#domain}}
-                            <dt>Domain</dt>
-                            <dd>{{domain}}</dd>
-                            {{/domain}}
                         </dl>
                     </div>
                 </div>
@@ -55,7 +51,7 @@
             <div class="row no-gutters h-100 pt-2 px-2">
                 <div class="col-md-12">
                     <div class="container-fluid">
-                        <pre class="small"><div data-href="{{entityID}}" data-action="xml"></div></pre>
+                        <pre class="small"><div data-href="{{entityID}}" data-action="samlmd"></div></pre>
                     </div>
                 </div>
             </div>
