--- a/src/templates/resources.html
+++ b/src/templates/resources.html
@@ -1,5 +1,5 @@
 {{#values}}
-<div id="li-{{idx}}" class="card mb-2 {{^Valid}}border border-danger{{/Valid}} {{#HasInvalids}}border border-warning{{/HasInvalids}}">
+<div id="li-{{idx}}" class="card mb-2 {{#Valid}}border border-success{{/Valid}} {{^Valid}}border border-danger{{/Valid}} {{#HasInvalids}}border border-warning{{/HasInvalids}}">
     <div class="card-header {{^Valid}}alert alert-danger{{/Valid}} {{#HasInvalids}}alert alert-warning{{/HasInvalids}}">
         <h5 class="card-title">{{Resource}}</h5>
         <ul class="nav nav-tabs card-header-tabs">
@@ -16,6 +16,9 @@
             {{#HasChildren}}
             <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" id="ch-{{idx}}-tab" href="#ch-{{idx}}">Children</a></li>
             {{/HasChildren}}
+            {{#Count}}
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" id="e-{{idx}}-tab" href="#e-{{idx}}">Entities</a></li>
+            {{/Count}}
         </ul>
     </div>
     <div class="tab-content w-auto">
@@ -24,6 +27,10 @@
                 <dl class="row">
                     <dt class="col-sm-3">Valid</dt>
                     <dd class="col-sm-9">{{Valid}}</dd>
+                    {{#Count}}
+                    <dt class="col-sm-3">Object Count</dt>
+                    <dd class="col-sm-9">{{Count}}</dd>
+                    {{/Count}}
                     {{#Parser}}
                     <dt class="col-sm-3">Type</dt>
                     <dd class="col-sm-9">{{Parser}}</dd>
@@ -105,6 +112,17 @@
             </div>
         </div>
         {{/HasChildren}}
+        {{#Count}}
+        <div class="tab-pane fade show" id="e-{{idx}}" role="tabpanel" aria-labelledby="e-{{idx}}-tab">
+            <div class="card-body">
+                <ul class="list-unstyled">
+                {{#Entities}}
+                    <li><a href="{{href}}">{{entityID}}</a></li>
+                {{/Entities}}
+                </ul>
+            </div>
+        </div>
+        {{/Count}}
     </div>
 </div>
 {{/values}}
