--- a/src/templates/entity.html
+++ b/src/templates/entity.html
@@ -5,7 +5,7 @@
                 <a class="nav-link active" data-toggle="tab" role="tab" id="title-tab-{{lid}}" href="#title-{{lid}}">Summary</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#xml-{{lid}}" data-toggle="tab" role="tab" id="xml-tab-{{lid}}">Metadata</a>
+                <a class="nav-link" href="#xml_{{lid}}" data-toggle="tab" role="tab" id="xml-tab-{{lid}}">Metadata</a>
             </li>
         </ul>
     </div>
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade" id="xml-{{lid}}" role="tabpanel" aria-labelledby="xml-tab-{{lid}}">
+        <div class="tab-pane fade" id="xml_{{lid}}" role="tabpanel" aria-labelledby="xml-tab-{{lid}}">
             <div class="row no-gutters h-100 pt-2 px-2">
                 <div class="col-md-12">
                     <div class="container-fluid">
